Potential fix for social icons appearing weird on firefox

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -237,6 +237,7 @@ body {
 
 	&__link {
 		position: relative;
+		display: inline-block;
 
 		&:hover,
 		&:focus-visible {
